--- a/AutomationProject/pom.xml
+++ b/AutomationProject/pom.xml
@@ -44,5 +44,15 @@
 <artifactId>extentreports</artifactId>
 <version>3.1.2</version>
 </dependency>
+<dependency>
+     <groupId>org.apache.poi</groupId>
+     <artifactId>poi</artifactId>
+     <version>4.1.1</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>4.1.1</version>
+    </dependency>
 </dependencies>
 </project>
