--- a/AutomationProject/pom.xml
+++ b/AutomationProject/pom.xml
@@ -54,5 +54,37 @@
         <artifactId>poi-ooxml</artifactId>
         <version>4.1.1</version>
     </dependency>
+    <dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>javase</artifactId>
+    <version>3.4.0</version>
+</dependency>
+<dependency>
+    <groupId>com.google.zxing</groupId>
+    <artifactId>core</artifactId>
+    <version>3.4.0</version>
+</dependency>
 </dependencies>
+<build>
+    <plugins>
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <release>11</release>
+        </configuration>
+      </plugin>
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.0</version>
+        <configuration>
+          <includes>
+            <exclude>**/*TestRunner.java</exclude>
+          </includes>
+        </configuration>
+      </plugin>
+</plugins>
+</build>
 </project>
