--- a/AutomationProject/pom.xml
+++ b/AutomationProject/pom.xml
@@ -18,21 +18,21 @@
     <scope>test</scope>
 </dependency>
 <dependency>
-<groupId>info.cukes</groupId>
+<groupId>io.cucumber</groupId>
 <artifactId>cucumber-java</artifactId>
-<version>1.2.5</version>
+<version>2.2.0</version>
 </dependency>
 <dependency>
-<groupId>info.cukes</groupId>
-<artifactId>cucumber-jvm-deps</artifactId>
-<version>1.0.5</version>
-<scope>provided</scope>
-</dependency>
-<dependency>
-<groupId>info.cukes</groupId>
+<groupId>io.cucumber</groupId>
 <artifactId>cucumber-junit</artifactId>
-<version>1.2.5</version>
+<version>2.2.0</version>
 <scope>test</scope>
+</dependency>
+<dependency>
+<groupId>io.cucumber</groupId>
+<artifactId>cucumber-jvm-deps</artifactId>
+<version>1.0.6</version>
+<scope>provided</scope>
 </dependency>
 <dependency>
 <groupId>com.vimalselvam</groupId>
