--- a/AutomationProject/pom.xml
+++ b/AutomationProject/pom.xml
@@ -7,10 +7,10 @@
   <description>AutomationProject</description>
   <dependencies>
     <dependency>
-        <groupId>com.github.2gis.winium</groupId>
-        <artifactId>winium-webdriver</artifactId>
-        <version>0.1.0-1</version>
-    </dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.1.1</version>
+</dependency>
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
